--- a/index.html
+++ b/index.html
@@ -14,5 +14,15 @@ layout: default
 
       <a href="{{ site.baseurl }}{{ post.url }}" class="read-more">Read More</a>
     </article>
+  <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<ins class="adsbygoogle"
+     style="display:block; text-align:center;"
+     data-ad-format="fluid"
+     data-ad-layout="in-article"
+     data-ad-client="ca-pub-3201220427379470"
+     data-ad-slot="2921542940"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
   {% endfor %}
 </div>
